force-app/main/default/objects/CMLSnippet__c/CMLSnippet__c.object-meta.xml
<CustomObject>
    <label>CML Snippet</label>
    <nameField>
        <label>CML Snippet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CML Snippets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>