force-app/main/default/objects/CMLSnippet__c/fields/CML__c.field-meta.xml
<CustomField>
    <fullName>CML__c</fullName>
    <label>CML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>