force-app/main/default/objects/CMLSnippet__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product2</fullName>
            </value>
            <value>
                <fullName>ProductClassification</fullName>
            </value>
            <value>
                <fullName>ProductComponentGroup</fullName>
            </value>
            <value>
                <fullName>ProductClassificationAttr</fullName>
            </value>
            <value>
                <fullName>ProductRelComponentOverride</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>