force-app/main/default/objects/CMLSnippet__c/fields/ParentProduct2__c.field-meta.xml
<CustomField>
    <fullName>ParentProduct2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product2</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>CML Snippets</relationshipLabel>
    <relationshipName>CML_Snippets</relationshipName>
    <type>Lookup</type>
</CustomField>