force-app/main/default/objects/CMLSnippet__c/fields/ParentProductAttributeDefinition__c.field-meta.xml
<CustomField>
    <fullName>ParentProductAttributeDefinition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product Attribute Definition</label>
    <referenceTo>ProductAttributeDefinition</referenceTo>
    <relationshipLabel>CML Snippets</relationshipLabel>
    <relationshipName>CML_Snippets</relationshipName>
    <type>Lookup</type>
</CustomField>