force-app/main/default/objects/CMLSnippet__c/fields/ParentProductClassification__c.field-meta.xml
<CustomField>
    <fullName>ParentProductClassification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product Classification</label>
    <referenceTo>ProductClassification</referenceTo>
    <relationshipLabel>CML Snippets</relationshipLabel>
    <relationshipName>CML_Snippets</relationshipName>
    <type>Lookup</type>
</CustomField>