force-app/main/default/objects/CMLSnippet__c/fields/ParentProductClassificationAttr__c.field-meta.xml
<CustomField>
    <fullName>ParentProductClassificationAttr__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product Classification Attr</label>
    <referenceTo>ProductClassificationAttr</referenceTo>
    <relationshipLabel>CML Snippets</relationshipLabel>
    <relationshipName>CML_Snippets</relationshipName>
    <type>Lookup</type>
</CustomField>