force-app/main/default/objects/CMLSnippet__c/fields/ParentProductComponentGroup__c.field-meta.xml
<CustomField>
    <fullName>ParentProductComponentGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product Component Group</label>
    <referenceTo>ProductComponentGroup</referenceTo>
    <relationshipLabel>CML Snippets</relationshipLabel>
    <relationshipName>CML_Snippets</relationshipName>
    <type>Lookup</type>
</CustomField>