force-app/main/default/objects/CMLSnippet__c/fields/ParentProductRelComponentOverride__c.field-meta.xml
<CustomField>
    <fullName>ParentProductRelComponentOverride__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product Related Component Override</label>
    <referenceTo>ProductRelComponentOverride</referenceTo>
    <relationshipLabel>CML Snippets</relationshipLabel>
    <relationshipName>CML_Snippets</relationshipName>
    <type>Lookup</type>
</CustomField>